--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,7 +4,7 @@
 .page {
   display: flex;
   margin: 0;
-   background-color: #141B1C;
+   background-color: #141b1c;
 }
 .container {
   margin: auto;
