--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,8 @@
   display: block;
   content: "Website";
   font-weight: 300;
-  font-size: 18px;
-  line-height: 18px;
+  font-size: 20px;
+  line-height: 24px;
 }
 .price-card__price {
   text-align: center;
@@ -122,7 +122,7 @@
 .page {
   display: flex;
   margin: 0;
-  background-color: #141B1C;
+  background-color: #141b1c;
 }
 
 .container {
