--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,9 +5,10 @@
   display: flex;
   margin: 0;
    background-color: #141b1c;
+    padding: 115px 0;
 }
 .container {
   margin: auto;
- padding-top: 115px;
+
   display: flex;
 }
