--- a/styles.css
+++ b/styles.css
@@ -1,134 +1,122 @@
-.price-card {
-  background: #334247;
-  width: 380px;
-  display: flex;
-  flex-direction: column;
-  padding: 33px 0 40px 0;
-  margin-right: 18px;
-  overflow: hidden;
-}
-.price-card:nth-child(2) {
-  position: relative;
-}
-.price-card:nth-child(2) .price-card__price {
-  background-color: #3A6BA5;
-}
-.price-card:nth-child(2) .price-card__button {
-  background-color: #3A6BA5;
-}
-.price-card:nth-child(2) .price-card__options-list-item::before {
-  content: url(../img/check-blue.png);
-}
-.price-card:nth-child(2)::after {
-  content: "popular";
-  display: block;
-  background-color: #DC3F45;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 17px;
-  text-transform: uppercase;
-  position: absolute;
-  right: -40px;
-  top: 34px;
-  transform: rotate(45deg);
-  padding: 2px 50px;
-  text-align: center;
-}
-.price-card:last-child {
-  margin-right: 0;
-}
-.price-card:last-child .price-card__price {
-  background-color: #EC632A;
-}
-.price-card:last-child .price-card__button {
-  background-color: #EC632A;
-}
-.price-card:last-child .price-card__options-list-item::before {
-  content: url(../img/chack-orange.png);
-}
-.price-card__title {
-  text-align: center;
-  font-weight: 700;
-  font-size: 35px;
-  line-height: 43px;
-  margin: 0;
-  margin-bottom: 33px;
-}
-.price-card__title::after {
-  display: block;
-  content: "Website";
-  font-weight: 300;
-  font-size: 20px;
-  line-height: 24px;
-}
-.price-card__price {
-  text-align: center;
-  font-weight: 700;
-  font-size: 55px;
-  line-height: 67px;
-  width: 100%;
-  background: #5BB189;
-  padding: 19px 110px;
-  margin-bottom: 40px;
-}
-.price-card__description {
-  text-align: center;
-  font-weight: 300;
-  font-size: 15px;
-  line-height: 18px;
-  margin-bottom: 40px;
-}
-.price-card__options-list {
-  padding: 0;
-  margin: 0;
-  margin-bottom: 39px;
-  list-style: none;
-}
-.price-card__options-list-item {
-  font-weight: 300;
-  font-size: 15px;
-  line-height: 18px;
-  padding: 16px 0;
-}
-.price-card__options-list-item::before {
-  content: url(../img/check-green.png);
-  display: inline-block;
-  margin: 0 22px;
-  height: 13px;
-}
-.price-card__options-list :nth-child(odd) {
-  background-color: #2A3438;
-  width: 100%;
-}
-.price-card__button {
-  align-self: center;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  border-radius: 20px;
-  background: #5BB189;
-  text-transform: uppercase;
-  border: none;
-  width: 155px;
-  height: 40px;
-}
-
 * {
   font-family: "Montserrat", sans-serif;
   color: #fff;
   box-sizing: border-box;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
 }
 
-.page {
-  display: flex;
+.price-card {
+  position: relative;
+  width: 380px;
+  background: #334247;
+  overflow: hidden;
+  padding: 33px 0 40px;
+  margin-right: 18px;
+}
+.price-card__title {
+  text-align: center;
+  font-size: 35px;
+  line-height: 43px;
   margin: 0;
-  background-color: #141b1c;
-  padding: 64px 0;
+}
+.price-card__subtitle {
+  text-align: center;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 24px;
+  margin: 0 0 33px;
+}
+.price-card__price {
+  text-align: center;
+  font-size: 55px;
+  line-height: 67px;
+  padding: 19px 110px;
+  margin-bottom: 40px;
+}
+.price-card__price-green {
+  background: #5BB189;
+}
+.price-card__price-blue {
+  background: #3A6BA5;
+}
+.price-card__price-orange {
+  background: #EC632A;
+}
+.price-card__description {
+  text-align: center;
+  font-weight: 300;
+  margin-bottom: 40px;
+}
+.price-card__options-list {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 39px;
+}
+.price-card__options-list :nth-child(odd) {
+  background-color: #2A3438;
+}
+.price-card__options-list-item {
+  font-weight: 300;
+  padding: 16px 0;
+}
+.price-card__icon {
+  display: inline-block;
+  margin: 0 22px;
+  height: 13px;
+  width: 13px;
+}
+.price-card__icon-green {
+  background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png);
+}
+.price-card__icon-blue {
+  background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png);
+}
+.price-card__icon-orange {
+  background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png);
+}
+.price-card__button-green {
+  background: #5BB189;
+}
+.price-card__button-blue {
+  background: #3A6BA5;
+}
+.price-card__button-orange {
+  background: #EC632A;
+}
+.price-card__ribbon {
+  position: absolute;
+  display: block;
+  text-align: center;
+  right: -40px;
+  top: 34px;
+  transform: rotate(45deg);
+  background-color: #DC3F45;
+  font-size: 14px;
+  line-height: 17px;
+  text-transform: uppercase;
+  padding: 2px 50px;
+}
+
+.button {
+  display: block;
+  width: 155px;
+  height: 40px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  border: none;
+  border-radius: 20px;
+  text-transform: uppercase;
+  margin: 0 auto;
 }
 
 .container {
-  margin: auto;
   display: flex;
+  justify-content: center;
+  background-color: #141b1c;
+  padding: 64px 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
