--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -2,4 +2,7 @@
   font-family: 'Montserrat', sans-serif;
   color: #fff;
   box-sizing: border-box;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
 }
