--- a/styles/price-card.scss
+++ b/styles/price-card.scss
@@ -7,6 +7,9 @@
   padding: 33px 0 40px;
   margin-right: 18px;
 
+  &:last-child {
+    margin-right: 0;
+  }
 
   &__title {
     text-align: center;
@@ -63,14 +66,13 @@
   &__options-list-item {
     font-weight: 300;
     padding: 16px 0;
-
   }
 
   &__icon {
     display: inline-block;
-    margin: 0 22px;
     height: 13px;
     width: 13px;
+    margin: 0 22px;
 
     &-green {
       background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png);
