--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,14 @@
   line-height: 18px;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #141b1c;
+}
+
 .price-card {
   position: relative;
   width: 380px;
@@ -113,13 +121,6 @@
   border-radius: 20px;
   text-transform: uppercase;
   margin: 0 auto;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  background-color: #141b1c;
-  padding: 64px 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
