--- a/styles/price-card.scss
+++ b/styles/price-card.scss
@@ -58,7 +58,7 @@
   &__description {
     text-align: center;
     font-weight: 300;
-    margin-bottom: 40px;
+    margin:0 26px 40px 26px;
   }
 
   &__options-list {
