--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,9 @@
 .price-card__icon {
   display: inline-block;
   height: 13px;
-  width: 13px;
+  width: 15px;
   margin: 0 22px;
+  background-repeat: no-repeat;
 }
 .price-card__icon-basic {
   background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png);
